--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
 	<meta name="last-modified" content="2019-08-30">
 	<meta name="author" content="ORGArena GmbH">
