--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 	<link href="revolution/css/navigation.css" rel="stylesheet">
 	<link href="revolution/css/layers.css" rel="stylesheet">
 	<link href="revolution/css/settings.css" rel="stylesheet">
+	<link href="css/software-pioniere.css" rel="stylesheet">
 
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
 
 	<!-- Start Cookie Plugin -->
 	<script type="text/javascript">
@@ -216,6 +218,40 @@
 		<!--</div>-->
 	<!--</section>-->
 
+<!--	<section id="home" class="full-screen-dem parallax" data-stellar-background-ratio="0.5">-->
+<!--		<div class="parallax-overlay"></div>-->
+<!--		<div class="home-content text-center">-->
+<!--			<div class="container">-->
+<!--				<h1 class=" slide-logo"><img src="img/orga-app/ORGA_App_dunkel.svg" width="40%"></h1>-->
+<!--				<div class="main-flex-slider">-->
+<!--					<ul class="slides">-->
+<!--						<li>-->
+<!--&lt;!&ndash;							<h1>LET'S WORK TOGETHER</h1>&ndash;&gt;-->
+<!--														<h1 style="-moz-hyphens: auto;-->
+<!--   -o-hyphens: auto;-->
+<!--   -webkit-hyphens: auto;-->
+<!--   -ms-hyphens: auto;-->
+<!--   hyphens: auto; ">Großveranstaltungen</h1>-->
+<!--&lt;!&ndash;														<p>Planen und Durchführen</p>&ndash;&gt;-->
+<!--						</li>-->
+<!--						<li>-->
+<!--							<h1>web design agency</h1>-->
+
+<!--						</li>-->
+<!--						<li>-->
+<!--							<h1>Clean Modern design</h1>-->
+
+<!--						</li>-->
+<!--					</ul>-->
+<!--				</div>-->
+<!--				<h2 class="slide-btm-text">Codeon FOR DESIGN AGENCIES - BUSINESS AND CORPORATE</h2>-->
+<!--				<div class="home-arrow-down text-center">-->
+<!--					<p class="scrollto"><a href="#about" class="btn btn-lg btn-theme-color">let's Start </a></p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</section>-->
+
 	<section id="orga-app" class="full-screen-dem parallax" data-stellar-background-ratio="0.5">
 		<div class="parallax-overlay"></div>
 		<div class="home-content text-center">
@@ -224,23 +260,23 @@
 				<div class="main-flex-slider">
 					<ul class="slides">
 						<li>
-							<h1>Großveranstaltungen</h1>
+							<h1 class="hyphensAuto">Großveranstaltungen</h1>
 							<p>Planen und Durchführen</p>
 						</li>
 						<li>
-							<h1>Sicherheit</h1>
+							<h1 class="hyphensAuto">Sicherheit</h1>
 							<p>proaktiver Informationsfluss für mehr Sicherheit</p>
 						</li>
 						<li>
-							<h1>Checklisten</h1>
+							<h1 class="hyphensAuto">Checklisten</h1>
 							<p>mit Erinnerungs- und Eskalations-Szenrien</p>
 						</li>
 						<li>
-							<h1>Kommunikation</h1>
+							<h1 class="hyphensAuto">Kommunikation</h1>
 							<p>mit Erinnerungs- und Eskalations-Szenrien</p>
 						</li>
 						<li>
-							<h1>Dokumentation</h1>
+							<h1 class="hyphensAuto">Dokumentation</h1>
 							<p></p>
 						</li>
 					</ul>
@@ -455,8 +491,43 @@
 				<div class="row">
 
 					<!-- Linke Seite -->
-					<div class="col-xs-6 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
-						<!-- Funktionsbereiche -->
+					<div class="col-xs-12 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
+						<!-- Cloudbasiert -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-cloud"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Cloud</strong>basierte Lösung mit klarem <strong>Bundesliga</strong>-Fokus
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Selbstorganisation -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-list"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Selbstorganisation</strong><br>
+										Funktionsbereiche | Rollen | Checkklisten | Aufgaben
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Delegation -->
 						<div class="row margin-btm-20">
 							<div class="col-md-2">
 								<div class="services-icon">
@@ -465,110 +536,157 @@
 							</div>
 							<div class="col-md-10">
 								<div class="services-info">
-									<!--<h3>Rechte</h3>-->
 									<p>
-										Gliedern Sie Ihre Organisation in Funktionsbereiche
+										<strong>Delegation</strong> von Verantwortlichkeiten an Abteilungsleiter
 									</p>
 								</div>
 							</div>
 						</div>
 
-						<!-- Rollen und Benutzer -->
+						<!-- Dienstplan -->
 						<div class="row margin-btm-20">
 							<div class="col-md-2">
 								<div class="services-icon">
-									<i class="fa">
-										<ion-icon name="people"></ion-icon>
-									</i>
+									<i class="fa fa-users"></i>
 								</div>
 							</div>
 							<div class="col-md-10">
 								<div class="services-info">
-									<!--<h3>Rechte</h3>-->
 									<p>
-										Legen Sie Rolle nud Benutzer mit flexiblem
-										Berechtigungskonzept an
+										<strong>Dienstplan</strong> mit intelligentem Rechte- und Zugriffsmanagement inklusive Anruffunktion
 									</p>
 								</div>
 							</div>
 						</div>
 
-						<!-- Checklisten -->
+
+						<!-- Dokumentenverwaltung -->
 						<div class="row margin-btm-20">
 							<div class="col-md-2">
 								<div class="services-icon">
-									<i class="fa">
-										<ion-icon name="done-all"></ion-icon>
-									</i>
+									<i class="fa fa-file-text-o"></i>
 								</div>
 							</div>
 							<div class="col-md-10">
 								<div class="services-info">
-									<!--<h3>Checklisten</h3>-->
 									<p>
-										Arbeiten Sie Checklisten und Aufgaben einfach in der ORGA App ab
+										Einfach zu bedienende <strong>Dokumentenverwaltung</strong> mit allgemeinen und SPieltagsbezogenen Dokumenten
 									</p>
 								</div>
 							</div>
 						</div>
 
-
-					</div>
-
-					<div class="col-xs-6 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
-					<!-- Kontakte -->
-					<div class="row margin-btm-20">
-						<div class="col-md-2">
-							<div class="services-icon">
-								<i class="fa fa-address-card"></i>
+						<!-- Revisionssicherer Prüfbericht -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-shield"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Revisionssicherer Prüfbericht</strong>
+									</p>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-10">
-							<div class="services-info">
-								<!--<h3>Kontakte</h3>-->
-								<p>
-									Haben Sie alle Kontakte aus dem Dienstplan jederzeit im Zugriff
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Fotos -->
-					<div class="row margin-btm-20">
-						<div class="col-md-2">
-							<div class="services-icon">
-								<i class="fa fa-camera"></i>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<div class="services-info">
-								<!--<h3></h3>-->
-								<p>
-									Machen Sie Fotos und melden Sie Probleme direkt aus der App heraus an die richtigen Stellen
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Messages -->
-					<div class="row margin-btm-20">
-						<div class="col-md-2">
-							<div class="services-icon">
-								<i class="fa fa-envelope"></i>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<div class="services-info">
-								<!--<h3>KickOff-Workshop</h3>-->
-								<p>
-									Schreiben Sie veranstaltungsrelevante Mitteilsungen und versenden Sie sie als Push-Benachrichtigung direkt von ihrem Smartphone
-								</p>
-							</div>
-						</div>
-					</div>
 
 				</div>
-			</div>
+
+					<!-- Linke Seite -->
+					<div class="col-xs-12 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
+
+						<!-- Incidentmanagement -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-ticket"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										Trouble Tickets <br>
+										<strong>Incidentmanagement</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Veranstaltungsphasen -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-area-chart"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<!--<h3>Rechte</h3>-->
+									<p>
+										Abbildung von <strong>Veranstaltungsphasen</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Nichts vergessen -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-lightbulb-o"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Nichts vergessen</strong> <br>
+										Aufgaben-Deadlines mit Erinnerungs- und Eskalationsfunktionen
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Automatische Benachrichtigung im Fehlerfall -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-bullhorn"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Automatische Benachrichtigung im Fehlerfall</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Individuelle Module -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-map-signs"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Individuelle Module</strong><br/>
+									<ul>
+										<li><b>Gastrochecks</b> zur Qualitätssicherung der Kioske und Counter im Stadion</li>
+										<li><b>Tourguide</b> Modul zur einfachen Organisation der Stadiontouren</li>
+										<li><b>Displaysteuerung</b></li>
+									</ul>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 		</div>
 
 		 <div class="services-section-2 background-dfl parallax" data-stellar-background-ratio="0.5">
