--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
 			<div class="container">
 
 				<div class="row">
-
+<!--DESKTOP-->
 					<!-- Linke Seite -->
-					<div class="col-xs-12 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
+					<div class="hidden-xs col-sm-6 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
 						<!-- Cloudbasiert -->
 						<div class="row margin-btm-20">
 							<div class="col-md-2">
@@ -594,8 +594,8 @@
 
 				</div>
 
-					<!-- Linke Seite -->
-					<div class="col-xs-12 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
+					<!-- rechte Seite -->
+					<div class="hidden-xs col-sm-6 col-md-6 wow animated fadeInLeft" data-wow-delay="0.3s">
 
 						<!-- Incidentmanagement -->
 						<div class="row margin-btm-20">
@@ -677,6 +677,204 @@
 									<p>
 										<strong>Individuelle Module</strong><br/>
 									<ul>
+										<li><b>Gastrochecks</b> zur Qualitätssicherung der Kioske und Counter im Stadion</li>
+										<li><b>Tourguide</b> Modul zur einfachen Organisation der Stadiontouren</li>
+										<li><b>Displaysteuerung</b></li>
+									</ul>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+<!--SMALL DEVICE-->
+					<!-- Linke Seite -->
+					<div class="col-xs-12 hidden-md hidden-sm hidden-lg wow animated fadeInLeft text-center" data-wow-delay="0.3s">
+						<!-- Cloudbasiert -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-cloud"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Cloud</strong>basierte Lösung mit klarem <strong>Bundesliga</strong>-Fokus
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Selbstorganisation -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-list"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Selbstorganisation</strong><br>
+										Funktionsbereiche | Rollen | Checkklisten | Aufgaben
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Delegation -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-sitemap"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Delegation</strong> von Verantwortlichkeiten an Abteilungsleiter
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Dienstplan -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-users"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Dienstplan</strong> mit intelligentem Rechte- und Zugriffsmanagement inklusive Anruffunktion
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Dokumentenverwaltung -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-file-text-o"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										Einfach zu bedienende <strong>Dokumentenverwaltung</strong> mit allgemeinen und SPieltagsbezogenen Dokumenten
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Revisionssicherer Prüfbericht -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-shield"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Revisionssicherer Prüfbericht</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+					<!-- rechte Seite -->
+					<div class="col-xs-12  hidden-md hidden-sm  hidden-lg wow animated fadeInLeft text-center" data-wow-delay="0.3s">
+
+						<!-- Incidentmanagement -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-ticket"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										Trouble Tickets <br>
+										<strong>Incidentmanagement</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Veranstaltungsphasen -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-area-chart"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<!--<h3>Rechte</h3>-->
+									<p>
+										Abbildung von <strong>Veranstaltungsphasen</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Nichts vergessen -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-lightbulb-o"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Nichts vergessen</strong> <br>
+										Aufgaben-Deadlines mit Erinnerungs- und Eskalationsfunktionen
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Automatische Benachrichtigung im Fehlerfall -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-bullhorn"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Automatische Benachrichtigung im Fehlerfall</strong>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Individuelle Module -->
+						<div class="row margin-btm-20">
+							<div class="col-md-2">
+								<div class="services-icon">
+									<i class="fa fa-map-signs"></i>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<div class="services-info">
+									<p>
+										<strong>Individuelle Module</strong><br/>
+									<ul style="list-style-type: none;">
 										<li><b>Gastrochecks</b> zur Qualitätssicherung der Kioske und Counter im Stadion</li>
 										<li><b>Tourguide</b> Modul zur einfachen Organisation der Stadiontouren</li>
 										<li><b>Displaysteuerung</b></li>
@@ -789,59 +987,58 @@
 			<!--.container-->
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8">
-						<h4>Sie haben Fragen oder möchten gerne einen unverbindlichen Demotermin? <br>Gerne helfen wir Ihnen weiter.</h4>
-						<form name="sentMessage" id="contactForm" novalidate>
-							<div class="row">
-								<div class="col-md-6">
-									<div class="row control-group">
-										<div class="form-group col-xs-12 controls">
-											<label>Name<span>*</span></label>
-											<input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Bitte tragen Sie Ihren Namen ein.">
-											<p class="help-block"></p>
-										</div>
-									</div>
-								</div>
+<!--					<div class="col-md-8">-->
+<!--						<h4>Sie haben Fragen oder möchten gerne einen unverbindlichen Demotermin? <br>Gerne helfen wir Ihnen weiter.</h4>-->
+<!--						<form name="sentMessage" id="contactForm" novalidate>-->
+<!--							<div class="row">-->
+<!--								<div class="col-md-6">-->
+<!--									<div class="row control-group">-->
+<!--										<div class="form-group col-xs-12 controls">-->
+<!--											<label>Name<span>*</span></label>-->
+<!--											<input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Bitte tragen Sie Ihren Namen ein.">-->
+<!--											<p class="help-block"></p>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
 
-								<div class="col-md-6">
-									<div class="row control-group">
-										<div class="form-group col-xs-12 controls">
-											<label>Telefonnummer</label>
-											<input type="text" class="form-control" placeholder="Telefonnummer" id="phone">
-											<p class="help-block"></p>
-										</div>
-									</div>
-								</div>
+<!--								<div class="col-md-6">-->
+<!--									<div class="row control-group">-->
+<!--										<div class="form-group col-xs-12 controls">-->
+<!--											<label>Telefonnummer</label>-->
+<!--											<input type="text" class="form-control" placeholder="Telefonnummer" id="phone">-->
+<!--											<p class="help-block"></p>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
 
-								<div class="col-md-6">
-									<div class="row control-group">
-										<div class="form-group col-xs-12 controls">
-											<label>Email Adresse<span>*</span></label>
-											<input type="email" class="form-control" placeholder="Email Adresse" id="email" required data-validation-required-message="Bitte teilen Sie uns Ihre Email Adresse mit.">
-											<p class="help-block"></p>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row control-group">
-								<div class="form-group col-xs-12 controls">
-									<label>Nachricht<span>*</span></label>
-									<textarea rows="5" class="form-control" placeholder="Nachricht" id="message" required data-validation-required-message="Bitte tragen Sie ein, worum es in Ihrer Anfrage geht."></textarea>
-									<p class="help-block"></p>
-								</div>
-							</div>
-							<br>
-							<div id="success"></div>
-							<div class="row">
-								<div class="form-group col-xs-12">
-									<button type="submit" class="btn btn-theme-color btn-lg">Nachricht senden</button>
-								</div>
-							</div>
-						</form>
-						<!--contact form-->
-					</div>
-					<div class="col-md-4">
-						<h4>Kontakt</h4>
+<!--								<div class="col-md-6">-->
+<!--									<div class="row control-group">-->
+<!--										<div class="form-group col-xs-12 controls">-->
+<!--											<label>Email Adresse<span>*</span></label>-->
+<!--											<input type="email" class="form-control" placeholder="Email Adresse" id="email" required data-validation-required-message="Bitte teilen Sie uns Ihre Email Adresse mit.">-->
+<!--											<p class="help-block"></p>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="row control-group">-->
+<!--								<div class="form-group col-xs-12 controls">-->
+<!--									<label>Nachricht<span>*</span></label>-->
+<!--									<textarea rows="5" class="form-control" placeholder="Nachricht" id="message" required data-validation-required-message="Bitte tragen Sie ein, worum es in Ihrer Anfrage geht."></textarea>-->
+<!--									<p class="help-block"></p>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<br>-->
+<!--							<div id="success"></div>-->
+<!--							<div class="row">-->
+<!--								<div class="form-group col-xs-12">-->
+<!--									<button type="submit" class="btn btn-theme-color btn-lg">Nachricht senden</button>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</form>-->
+<!--						&lt;!&ndash;contact form&ndash;&gt;-->
+<!--					</div>-->
+					<div class="col-md-6 text-center">
 						<div class="contact-info wow animated fadeInRight" data-wow-delay=".6s">
 							<h5>ORGArena Ansprechpartner</h5>
 							<p>Michael von Detten</p>
@@ -849,7 +1046,12 @@
 							</p>
 							<p>Thilo Böhm</p>
 							<p><i class="fa fa-home"></i><a href="tel:00491608825508"> +49 160 8825508</a></p>
-							<hr>
+
+						</div>
+					</div>
+					<div class="col-md-6 text-center">
+						<h4>&nbsp;</h4>
+						<div class="contact-info wow animated fadeInRight" data-wow-delay=".6s">
 							<h5>ORGArena Support</h5>
 							<p><i class="fa fa-envelope"></i> <a href="mailto:info@orgarena.de">info@orgarena.de</a>
 							</p>
