--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 							<div class="col-md-10">
 								<div class="services-info">
 									<p>
-										Einfach zu bedienende <strong>Dokumentenverwaltung</strong> mit allgemeinen und SPieltagsbezogenen Dokumenten
+										Einfach zu bedienende <strong>Dokumentenverwaltung</strong> mit allgemeinen und spieltagsbezogenen Dokumenten
 									</p>
 								</div>
 							</div>
