--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
 						</li>
 						<li>
 							<h1 class="hyphensAuto">Checklisten</h1>
-							<p>mit Erinnerungs- und Eskalations-Szenrien</p>
+							<p>mit Erinnerungs- und Eskalations-Szenarien</p>
 						</li>
 						<li>
 							<h1 class="hyphensAuto">Kommunikation</h1>
-							<p>mit Erinnerungs- und Eskalations-Szenrien</p>
+							<p>mit Erinnerungs- und Eskalations-Szenarien</p>
 						</li>
 						<li>
 							<h1 class="hyphensAuto">Dokumentation</h1>
