--- a/impressum.html
+++ b/impressum.html
@@ -108,12 +108,12 @@
                 <div class="blog-item-sec">
                     <h1>Impressum</h1>
                     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2>
-                    <p>ORGArena GmbH (in Gründung)<br/> Kleine Stra&szlig;e 4<br/> 34434 Borgentreich </p>
+                    <p>ORGArena GmbH (in Gründung)<br/> Lindberghring 1<br/> D-33142 Büren</p>
                     <h2>Vertreten durch:</h2>
                     <p>
                         ORGArena GmbH<br/>
-                        Sitz Kleine Str. 4<br/>
-                        34434 Borgentreich<br/><br/>
+                        Lindberghring 1<br/>
+                        D-33142 Büren<br/><br/>
                     </p>
                     <h2>Kontakt:</h2>
                     <table>
