--- a/impressum.html
+++ b/impressum.html
@@ -231,6 +231,7 @@
                     <li><a href="/">Startseite</a></li>
                     <li><a href="impressum.html">Impressum</a></li>
                     <li><a href="datenschutz.html">Datenschutz</a></li>
+                    <li><a href="agbs.html">AGBs</a></li>
                 </ul>
             </div>
         </div>
