--- a/agbs.html
+++ b/agbs.html
@@ -163,7 +163,7 @@
 								<li>Diese Allgemeinen Vertragsbedingungen (im Folgenden: AGB) gelten für sämtliche Vertragsbeziehungen, in denen die ORGArena GmbH gegenüber Vertragspartnern
 									Leistungen erbringt.
 								</li>
-								<li>Im Folgenden wird die ORGArena GmbH als „ORGArena“, der Vertrags-partner der ORGArena als „Auftraggeber“ und beide gemeinsam als „die Parteien“ bezeichnet.</li>
+								<li>Im Folgenden wird die ORGArena GmbH als „ORGArena“, der Vertragspartner der ORGArena als „Auftraggeber“ und beide gemeinsam als „die Parteien“ bezeichnet.</li>
 								<li>„Leistungen“ im Sinne von Ziff. 1 Nr. 1.1 dieser AGB werden in den Verträ-gen zwischen ORGArena und Auftraggeber vereinbart.</li>
 								<li>Soweit nichts anderes vereinbart ist, gelten diese AGB ausschließlich. D. h. entgegenstehende und/oder ergänzende Bedingungen – insbesondere die Allgemeinen
 									Geschäftsbedingungen des Auftraggebers – finden keine An-wendung, auch wenn der Auftraggeber auf diese hingewiesen und ORGA-rena solchen Bedingungen nicht
