--- a/agbs.html
+++ b/agbs.html
@@ -102,6 +102,21 @@
 			line-height: 1;
 			color: #1d8496;
 		}
+
+		@media (max-width: 767px) {
+			#blog-list LI:before {
+				margin-left: 0;
+			}
+			#blog-list OL LI {
+				font-size: 1.3em;
+				line-height: 1.2em;
+				margin-top: 24px;
+			}
+			#blog-list OL LI OL LI {
+				margin: 12px 0 4px 0;
+				line-height: 1.4em;
+			}
+		}
 		
 		.blog-item-sec {
 			border: none;
@@ -155,8 +170,8 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="blog-item-sec">
-					<h1>Allgemeine Geschäftsbedigungen</h1>
-					
+					<h1>Allgemeine Geschäftsbedingungen</h1>
+
 					<ol>
 						<li>Geltungsbereich der Vertragsbedingungen
 							<ol>
