--- a/impressum.html
+++ b/impressum.html
@@ -108,6 +108,10 @@
                 <div class="blog-item-sec">
                     <h1>Impressum</h1>
                     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2>
+                    <h3>Eine H3 Hedline</h3>
+                    <h4>Eine H4 Hedline</h4>
+                    <h5>Eine H5 Hedline</h5>
+                    <h6>Eine H6 Hedline</h6>
                     <p>ORGArena GmbH (in Gründung)<br/> Lindberghring 1<br/> D-33142 Büren</p>
                     <h2>Vertreten durch:</h2>
                     <p>
