--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 					<div class="col-md-12 col-sm-12">
 						<div class="row technologie">
 							<div class="col-md-12 text-center wow animated fadeInDown" data-wow-delay="0.3s" style="vertical-align: center">
-								<img src="img/fokus-bundesliga.png" width="500px" title="Fokus Bundesliga" data-toggle="tooltip" data-original-title="Fokus Bundesliga" data-placement="top"
+								<img src="img/fokus-bundesliga.png" title="Fokus Bundesliga" data-toggle="tooltip" data-original-title="Fokus Bundesliga" data-placement="top" style="width: 100%; max-width: 500px;"
 								/>
 							</div>
 						</div>
