CHANGE: stag => staging

--- a/dev.html
+++ b/dev.html
@@ -154,30 +154,30 @@
                     <p>
                         <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App STAGING">
                         <strong>iOS</strong><br>
-                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.install.html" target="_blank">
-                            https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.install.html
+                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html" target="_blank">
+                            https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html
                         </a>
                     </p>
 
                     <p>
                         <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App STAGING">
                         <strong>Android</strong><br>
-                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.apk" target="_blank">
-                            https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.apk
+                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk" target="_blank">
+                            https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk
                         </a>
                     </p>
 
                     <h5 style="margin-top: 20px;">Desktop Client</h5>
                     <p>
-                        <a href="https://orga-app-client-stag.azurewebsites.net/" target="_blank">
-                            https://orga-app-client-stag.azurewebsites.net/
+                        <a href="https://orga-app-client-staging.azurewebsites.net/" target="_blank">
+                            https://orga-app-client-staging.azurewebsites.net/
                         </a>
                     </p>
 
                     <h5 style="margin-top: 20px;">API URL</h5>
                     <p>
-                        <a href="https://orga-app-api-stag.azurewebsites.net" target="_blank">
-                            https://orga-app-api-stag.azurewebsites.net
+                        <a href="https://orga-app-api-staging.azurewebsites.net" target="_blank">
+                            https://orga-app-api-staging.azurewebsites.net
                         </a>
                     </p>
 
