PROD Infos hinzugefügt

--- a/dev.html
+++ b/dev.html
@@ -102,7 +102,7 @@
 
 <section id="page-head-bg">
     <div class="container">
-        <h1>ORGA App DEV / STAGING</h1>
+        <h1>ORGA App DEV / STAGING / PROD</h1>
     </div>
 </section><!--page-head bg end-->
 <section id="blog-list" class="padding-80">
@@ -144,7 +144,7 @@
                         </a>
                     </p>
 
-                </div>
+                </div> <!--blog-item section end-->
 
                 <div class="blog-item-sec">
 
@@ -182,6 +182,35 @@
                     </p>
 
                 </div>  <!--blog-item section end-->
+
+                <div class="blog-item-sec">
+
+                    <h3 style="margin: 0 0 30px 0;">PROD</h3>
+
+                    <h5 style="margin-top: 20px;">Mobile Apps</h5>
+                    <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
+                        <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small" alt="Apple App Store" style="margin-right: 20px;">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+                        <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
+                    </a>
+
+                    <h5 style="margin-top: 20px;">Desktop Client</h5>
+                    <p>
+                        <a href="https://orga-app-client-prod.azurewebsites.net/" target="_blank">
+                            https://orga-app-client-prod.azurewebsites.net/
+                        </a>
+                    </p>
+
+                    <h5 style="margin-top: 20px;">API URL</h5>
+                    <p>
+                        <a href="https://orga-app-api-stag.azurewebsites.net" target="_blank">
+                            https://orga-app-api-prod.azurewebsites.net
+                        </a>
+                    </p>
+
+                </div>  <!--blog-item section end-->
+
             </div><!--blog left content end-->
 
 
