PROD Desktop Client Link

--- a/dev.html
+++ b/dev.html
@@ -204,7 +204,7 @@
 
                     <h5 style="margin-top: 20px;">API URL</h5>
                     <p>
-                        <a href="https://orga-app-api-stag.azurewebsites.net" target="_blank">
+                        <a href="https://orga-app-api-prod.azurewebsites.net" target="_blank">
                             https://orga-app-api-prod.azurewebsites.net
                         </a>
                     </p>
